replaced componentWillReceiveProps with componentDidUpdate adjusted package name

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,5 +30,10 @@
       "jsx": true
     },
     "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "17.0"
+    }
   }
 }
