--- a/package.json
+++ b/package.json
@@ -107,8 +107,8 @@
     "memoize-one": "^5.1.1"
   },
   "peerDependencies": {
+    "date-fns": "^2.23.0",
     "interactjs": "^1.3.4",
-    "moment": "*",
     "prop-types": "^15.6.2",
     "react": ">=16.3",
     "react-dom": ">=16.3"
@@ -128,6 +128,7 @@
     "babel-plugin-react-remove-properties": "^0.3.0",
     "cross-env": "^5.1.4",
     "css-loader": "~0.26.0",
+    "date-fns": "^2.23.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^4.16.0",
@@ -144,7 +145,6 @@
     "jest-dom": "^3.5.0",
     "jest-watch-typeahead": "^0.3.1",
     "jsdom": "^11.5.1",
-    "moment": "^2.11.1",
     "node-sass": "^6.0.1",
     "prettier": "^1.10.2",
     "prettier-eslint-cli": "^4.7.0",
