--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,25 @@
 {
   "include": ["src"],
   "compilerOptions": {
+    "target": "es5",
     "allowJs": true,
     "declaration": true,
     // "emitDeclarationOnly": true,
-    "outDir": "lib"
+    "outDir": "lib",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+//    "noEmit": true,
+    "jsx": "react-jsx",
+//    "sourceMap": true,
+//    "noUnusedLocals": false,
+//    "noUnusedParameters": false,
   }
 }
