--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "parser": "babel-eslint"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "verbose": true,
     "testMatch": [
       "**/__tests__/**/*.js"
@@ -116,39 +117,40 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.0",
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.4",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/types": "^7.15.6",
+    "@testing-library/jest-dom": "^5.14.1",
     "@types/node": "^16.9.1",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^24.8.0",
+    "babel-jest": "^27.2.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-remove-properties": "^0.3.0",
-    "cross-env": "^5.1.4",
+    "cross-env": "^7.0.3",
     "css-loader": "~0.26.0",
     "date-fns": "^2.23.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^4.16.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-jest": "^21.6.1",
-    "eslint-plugin-prettier": "^2.5.0",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-standard": "^2.0.1",
     "faker": "^4.1.0",
     "interactjs": "^1.3.4",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.5.0",
-    "jest-watch-typeahead": "^0.3.1",
-    "jsdom": "^11.5.1",
+    "jest": "^27.2.0",
+    "jest-watch-typeahead": "^0.6.4",
+    "jsdom": "^16.7.0",
     "node-sass": "^6.0.1",
-    "prettier": "^1.10.2",
-    "prettier-eslint-cli": "^4.7.0",
+    "prettier": "^2.4.0",
+    "prettier-eslint-cli": "^5.0.1",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
     "react": "^16.2.0",
