--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "@babel/types": "^7.15.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@types/node": "^16.9.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-jest": "^27.2.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-remove-properties": "^0.3.0",
@@ -133,7 +134,6 @@
     "css-loader": "~0.26.0",
     "date-fns": "^2.23.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
