--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gecko-conception/react-calendar-timeline",
-  "version": "0.30.3",
+  "version": "0.30.4",
   "description": "react calendar timeline",
   "main": "lib/index.js",
   "scripts": {
@@ -123,16 +123,18 @@
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/types": "^7.15.6",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@types/node": "^16.9.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^18.8.5",
+    "@types/react": "18.0.25",
     "babel-jest": "^27.2.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "~0.26.0",
     "date-fns": "^2.23.0",
-    "enzyme": "^3.10.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -152,10 +154,9 @@
     "prettier-eslint-cli": "^5.0.1",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^4.1.1",
-    "react-testing-library": "^6.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
